# gilded-rose-kata-after-applying-design-pattern

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  vcpkg.json
src/: AgedBrieStrategy.h  BackstageStrategy.h  CMakeLists.txt  ConjuredStrategy.h  DefaultItemStrategy.h  GildedRose.cc  GildedRose.h  StrategyFactory.h  SulfurasStrategy.h  UpdateStrategy.h
test/cpp_googletest_unittest/: CMakeLists.txt  GildedRoseGoogletestUnitTests.cc
test/cpp_texttest/: CMakeLists.txt  GildedRoseTextTests.cc
